changed captions for tables for report

--- a/docs/report/main/adversarial_training.tex
+++ b/docs/report/main/adversarial_training.tex
@@ -25,7 +25,7 @@ Confidence                     & 96.03 & 79.05       \\
 Confidence Correctly Predicted & 96.69 & 82.55       \\
 Confidence Error               & 64.23 & 66.79       \\ \bottomrule
 \end{tabular}
-\caption{Test results for standard training model.}
+\caption{Test results for adversarial training model.}
 \label{adv-test}
 \end{table}
 \FloatBarrier
