--- a/docs/report/main/mixed_training.tex
+++ b/docs/report/main/mixed_training.tex
@@ -24,7 +24,7 @@ Confidence                     & 97.89 & 86.30       \\
 Confidence Correctly Predicted & 97.85 & 89.07       \\
 Confidence Error               & 66.91 & 70.22       \\ \bottomrule
 \end{tabular}
-\caption{Test results for standard training model.}
+\caption{Test results for mixed training model.}
 \label{mixed-test}
 \end{table}
 \FloatBarrier
