--- a/docs/slides/main/adversarial_examples.tex
+++ b/docs/slides/main/adversarial_examples.tex
@@ -19,3 +19,17 @@ $$ x = x + \eta $$
 
 
 \end{tframe}
+
+
+\begin{tframe}{Generating adversarial examples}
+
+\vspace{0.1in}
+\vspace{0.1in}
+\vspace{0.1in}
+
+\begin{figure}
+  \includegraphics[width=0.4\textwidth]{img/clean-adv.png}
+  \caption{Example of adversarial generation.}
+\end{figure}
+
+\end{tframe}
