--- a/docs/slides/main/cnn.tex
+++ b/docs/slides/main/cnn.tex
@@ -11,7 +11,19 @@ The net is based on LeNet and consists of eight layers, as shown in the followin
 
 \end{tframe}
 
-\begin{tframe}{CNN - Hyperparameters}
+\begin{tframe}{CNN - Settings}
+
+\vspace{0.1in}
+\vspace{0.1in}
+\vspace{0.1in}
+
+\begin{itemize}
+\item Number of epochs 30
+\item Learning rate initialized to 0.001
+\item Softmax log-loss as a cost function
+\item SGD with momentum initialized to 0.9
+\item Weight decay of 0.0005
+\end{itemize}
 
 
 \end{tframe}
