--- a/docs/slides/main/standard_training.tex
+++ b/docs/slides/main/standard_training.tex
@@ -1,10 +1,10 @@
 \begin{tframe}{Standard Training}
 
-The net was trained in a standard way, using the 60,000 images of the train and validation sets. The training went on for 30 epochs.
+The net was trained in a standard way, using the 60,000 images of the train and validation sets.
 
 \vspace{0.1in}
 
-The tests carried out on the trained model were of two kind. 
+The tests carried out on the trained model were of two kinds. 
 
 \vspace{0.1in}
 
