--- a/docs/slides/slides.tex
+++ b/docs/slides/slides.tex
@@ -12,8 +12,8 @@
 \usepackage{booktabs}
 
 \definecolor{UniBlue}{RGB}{83,121,170}
-\uselanguage{italian}
-\languagepath{italian}
+\uselanguage{english}
+\languagepath{english}
 \setbeamercolor{block title}{use=structure,fg=white,bg=UniBlue}
 \setbeamercolor{block body}{use=structure,fg=black,bg=white}
 
@@ -32,6 +32,8 @@
 \input{main/standard_training}
 \input{main/mixed_training}
 \input{main/adversarial_training}
+\input{main/adversarial_transfer}
+\input{main/conclusion}
 \input{main/references}
 
 \end{document}
