--- a/docs/slides/main/mixed_training.tex
+++ b/docs/slides/main/mixed_training.tex
@@ -1,11 +1,14 @@
 \begin{tframe}{Mixed Training}
 
-For this case, adversarial examples were included in the training phase. At each epoch, the adversarial example of each images were computed, given the model at that particular epoch. Both images, clean and adversarial, were used in the training process, similar to data augmentation. This way, both the clean example and the adversarial example participate in the optimization of the parameters of the model in order to decrease the loss.
+For this case, adversarial examples were included in the training phase. At each epoch, the adversarial example of each images were computed, given the model at that particular epoch. 
+
+\vspace{0.1in}
+
+Both images, clean and adversarial, were used in the training process, similar to data augmentation. This way, both the clean example and the adversarial example participate in the optimization of the parameters of the model in order to decrease the loss.
 
 \vspace{0.1in}
 
 Adversarial examples are thus generated dynamically at each epoch, so that the model is trained considering its blind-spots.
-The training went on for 30 epochs using 120,000 samples, half clean and half adversarial.
 
 \end{tframe}
 
