--- a/docs/slides/main/standard_training.tex
+++ b/docs/slides/main/standard_training.tex
@@ -30,8 +30,8 @@ The first test was made using the 10,000 clean samples from the testing set; the
 Correctly Predicted            & 98.47 & 3.36        \\
 Error                          & 1.53  & 96.64       \\
 Confidence                     & 98.59 & 93.82       \\
-Confidence Correctly Predicted & 99.04 & 91.67       \\
-Confidence Error               & 69.95 & 93.89       \\ \bottomrule
+Correctly Predicted Confidence & 99.04 & 91.67       \\
+Error Confidence               & 69.95 & 93.89       \\ \bottomrule
 \end{tabular}
 \end{table}
 
