--- a/docs/slides/slides.tex
+++ b/docs/slides/slides.tex
@@ -10,6 +10,7 @@
 \usepackage[beamer,customcolors]{hf-tikz}
 \usepackage[section]{placeins}
 \usepackage{booktabs}
+\usepackage[document]{ragged2e}
 
 \definecolor{UniBlue}{RGB}{83,121,170}
 \uselanguage{english}
@@ -23,7 +24,7 @@
 \date{10 Gennaio 2017}
 
 \begin{document}
-
+\justify
 \titlepageframe
 \input{main/introduction}
 \input{main/dataset}
