--- a/docs/slides/main/cnn.tex
+++ b/docs/slides/main/cnn.tex
@@ -20,6 +20,7 @@ The net is based on LeNet and consists of eight layers, as shown in the followin
 \begin{itemize}
 \item Number of epochs 30
 \item Learning rate initialized to 0.001
+\item Batch size of 100
 \item Softmax log-loss as a cost function
 \item SGD with momentum initialized to 0.9
 \item Weight decay of 0.0005
