--- a/docs/slides/main/dataset.tex
+++ b/docs/slides/main/dataset.tex
@@ -4,10 +4,14 @@ The MNIST dataset is a large dataset of handwritten digits, thus including ten m
 
 \vspace{0.1in}
 
+Accordingly to [1], the pixel values have been remapped in the range [0, 1].
+
+\vspace{0.1in}
+
 The MNIST dataset contains 60,000 training images (divided in two sets, train and validation, with 55,000 and 5,000 images resprectively) and 10,000 testing images.
 
 \vspace{0.1in}
 
-For this project, from each sample the mean image of the dataset were subtracted.
+For this project, the mean image of the dataset were subtracted from each sample.
 
 \end{tframe}
