--- a/docs/slides/main/mixed_training.tex
+++ b/docs/slides/main/mixed_training.tex
@@ -33,8 +33,8 @@ The tests were carried out as for the standard training.
 Correctly Predicted            & 98.21 & 85.28       \\
 Error                          & 1.79  & 14.72       \\
 Confidence                     & 97.89 & 86.30       \\
-Confidence Correctly Predicted & 97.85 & 89.07       \\
-Confidence Error               & 66.91 & 70.22       \\ \bottomrule
+Correctly Predicted Confidence & 97.85 & 89.07       \\
+Error Confidence               & 66.91 & 70.22       \\ \bottomrule
 \end{tabular}
 \end{table}
 
