update fast sign method slide

--- a/docs/slides/main/adversarial_examples.tex
+++ b/docs/slides/main/adversarial_examples.tex
@@ -27,7 +27,12 @@ The adversarial examples can thus be obtained as follow,
 
 $$ x = x + \eta $$
 
-In the implementation, $ \epsilon $ is set to 0.1.
+This is referred to as the “fast gradient sign method” of generating adversarial examples.
+
+\vspace{0.1in}
+
+In this implementation, $\epsilon$ is set to 0.1.
+
 
 \end{tframe}
 
