update slides final

--- a/docs/slides/main/adversarial_transfer.tex
+++ b/docs/slides/main/adversarial_transfer.tex
@@ -1,4 +1,4 @@
-\begin{tframe}{Adversarial example transfer - Error Rate}
+\begin{tframe}{Adversarial examples transfer - Error Rate}
 
 \begin{table}[]
 \centering
@@ -16,7 +16,7 @@ Mixed       & 7.71     & 10.57       & 14.72 \\ \bottomrule
 \end{tframe}
 
 
-\begin{tframe}{Adversarial example transfer - Error Confidence}
+\begin{tframe}{Adversarial examples transfer - Error Confidence}
 
 \begin{table}[]
 \centering
