--- a/docs/slides/main/introduction.tex
+++ b/docs/slides/main/introduction.tex
@@ -4,7 +4,7 @@ For this project, a model for a multi-label problem is trained, using the MNIST 
 
 \vspace{0.1in}
 
-The objective of this projects is to harness adversarial examples to make train more robust model, by lower the classification error and the confidence associated with those misclassification.
+The objective of this project is to harness adversarial examples to train a more robust model, by lowering the classification error and the confidence associated with those misclassifications.
 
 \end{frame}
 
