--- a/docs/slides/main/adversarial_examples.tex
+++ b/docs/slides/main/adversarial_examples.tex
@@ -18,8 +18,8 @@ The adversarial perturbation causes the activation to grow linearly by $w^{T}\et
 
 \begin{tframe}{Generating adversarial examples}
 
-Let $\theta$ be the parameters of a model, x the input to the model, y the targets associated with x (for machine learning tasks that have targets) and $J(\theta, x, y)$ be the cost used to train the neural network. 
-We can linearize the cost function around the current value of $\theta$, obtaining an optimal max-norm constrained pertubation of ,
+Let $\theta$ be the parameters of a model, $x$ the input to the model, $y$ the targets associated with $x$ and $J(\theta, x, y)$ be the cost used to train the neural network. 
+The cost function can be linearized around the current value of $\theta$, obtaining an optimal max-norm constrained pertubation of,
 
 $$ \eta = \epsilon * sign(\nabla_x J(\theta, x, y)) $$
 
