--- a/docs/slides/main/adversarial_examples.tex
+++ b/docs/slides/main/adversarial_examples.tex
@@ -25,7 +25,7 @@ $$ \eta = \epsilon * sign(\nabla_x J(\theta, x, y)) $$
 
 The adversarial examples can thus be obtained as follow,
 
-$$ x = x + \eta $$
+$$ \tilde{x} = x + \eta $$
 
 This is referred to as the “fast gradient sign method” of generating adversarial examples.
 
