--- a/docs/slides/main/introduction.tex
+++ b/docs/slides/main/introduction.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Introduction}
 
-For this project, a model for a multi-label problem is trained, using the MNIST dataset. Once the model is obtained, adversarial examples can be generated. An adversarial example is an example that is only slightly different from the original and correctly classified example that a model misclassify with a high confidence.
+For this project, a model for a multiclass classification is trained, using the MNIST dataset. Once the model is obtained, adversarial examples can be generated. An adversarial example is an example that is only slightly different from the original and correctly classified example that a model misclassify with a high confidence.
 
 \vspace{0.1in}
 
