--- a/docs/slides/main/mixed_training.tex
+++ b/docs/slides/main/mixed_training.tex
@@ -4,7 +4,7 @@ For this case, adversarial examples were included in the training phase. At each
 
 \vspace{0.1in}
 
-Both images, clean and adversarial, were used in the training process, similar to data augmentation. This way, both the clean examples and the adversarial examples participate in the optimization of the parameters of the model in order to decrease the loss.
+Both images, clean and adversarial, were used in the training process, similar to dataset augmentation. This way, both the clean examples and the adversarial examples participate in the optimization of the parameters of the model in order to decrease the loss.
 
 \vspace{0.1in}
 
